# Winterthur-Technopark-Lunch-API

./: .eslintrc  .gitignore  Cargo.toml  package.json  readme.md  samconfig.toml  template.yaml  webpack.config.ts
src/: api.ts  app.ts  db.ts  locations.ts  sharedModels.ts  wasmLoader.ts
src/controllers/: locationsController.ts  overviewController.ts
src/locations/: cafeteriaTrichtersaal.ts  coopRestaurantLokwerk.ts  eurestCafeteria.ts  loStivale.ts  pionier.ts  pionierController.ts  skillspark.ts  skillsparkController.ts  thaiWaegeli.ts  zhawRestaurants.ts
src/utils/: api.ts  db.ts  wasmLoader.ts
src/wasm/: eurest_cafeteria.rs  lib.rs  skillspark.rs  utils.rs  wasm_test.rs
src/wasm/pdf/: core_fonts.rs  encodings.rs  glyphnames.rs  mod.rs
