[package]
name = "skills-park-parser"
version = "0.1.0"
authors = ["runebaas <runebaas@gmail.com>"]
edition = "2018"
description = "Skills park menu parser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1.1", optional = true }
#pdf-extract = "0.6.1"
lopdf = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.104"
wee_alloc = { version = "0.4.2", optional = true }

# pdf-extract deps
adobe-cmap-parser = "0.3.3"
encoding = "0.2.33"
euclid = "0.20.5"
postscript = "0.11.1"
type1-encoding-parser = "0.1.0"
unicode-normalization = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
