[package]
name = "menu-parsing-helps"
version = "0.1.0"
authors = ["runebaas <runebaas@gmail.com>"]
edition = "2018"
description = "menu parsing helpers"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.10"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.13"
console_error_panic_hook = { version = "0.1.6", optional = true }
pdf-extract = "0.6.2"
lopdf = "0.24.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
serde_derive = "1.0.111"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
